<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.uic.group19.a422ndbank.MainApp.AccountCreation.AccountRegisterFragment">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <TextView
            android:id="@+id/text_registerTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="32sp"
            android:textColor="@color/colorTitle"
            android:text="@string/account_registration"/>

        <TextView
            android:id="@+id/text_registerSection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_registerTitle"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/register_basic_information"
            android:layout_marginBottom="16dp"/>

        <LinearLayout
            android:id="@+id/layout_registerFields"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_registerSection">

            <EditText
                android:id="@+id/field_firstName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/first_name"
                android:layout_marginBottom="16dp"/>

            <EditText
                android:id="@+id/field_lastName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/last_name"
                android:layout_marginBottom="16dp"/>

            <EditText
                android:id="@+id/field_registerUsername"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/hint_username"
                android:layout_marginBottom="16dp"/>

            <EditText
                android:id="@+id/field_registerPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:layout_marginBottom="16dp"/>

            <EditText
                android:id="@+id/field_registerPasswordRepeat"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/hint_password_repeat"
                android:inputType="textPassword"
                android:layout_marginBottom="16dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            app:layout_constraintWidth_percent="0.8"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp">

            <Button
                android:id="@+id/btn_previous"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorButtonText"
                android:background="@color/colorButtonBackground"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:textSize="24sp"
                android:textStyle="bold"
                android:text="@string/back_arrow"/>

            <android.support.v4.widget.Space
                android:layout_height="0dp"
                android:layout_width="0dp"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/btn_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorButtonText"
                android:background="@color/colorButtonBackground"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:textSize="24sp"
                android:textStyle="bold"
                android:text="@string/next_arrow"/>

        </LinearLayout>

    </android.support.constraint.ConstraintLayout>

</FrameLayout>