<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/main_HelloText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello {Name}"
        android:textColor="@color/ButtonColor"
        android:textSize="26sp"
        android:layout_marginTop="5dp"
        app:layout_constraintBottom_toTopOf="@+id/main_buttonsLayout"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.08"
        />

    <TextView
        android:id="@+id/main_CheckingNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Checking (#092378412)"
        android:textColor="@color/ButtonColor"
        android:textSize="21sp"
        android:layout_marginTop="2dp"
        app:layout_constraintLeft_toLeftOf="@+id/main_HelloText"
        app:layout_constraintRight_toRightOf="@+id/main_HelloText"
        app:layout_constraintTop_toBottomOf="@+id/main_HelloText"
        />

    <LinearLayout
        android:id="@+id/main_buttonsLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintWidth_percent="0.8"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <Button
            android:id="@+id/main_TransHist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/ButtonTextColor"
            android:background="@color/ButtonColor"
            android:textSize="24sp"
            android:textStyle="bold"
            android:text="@string/transaction_history"
            android:textAllCaps="false"
            />

        <Button
            android:id="@+id/main_Deposit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/ButtonTextColor"
            android:background="@color/ButtonColor"
            android:textSize="24sp"
            android:textStyle="bold"
            android:text="@string/deposit"
            android:layout_marginTop="23dp"
            android:textAllCaps="false"
            />

        <Button
            android:id="@+id/main_TransMoney"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/ButtonTextColor"
            android:background="@color/ButtonColor"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:layout_marginTop="23dp"
            android:text="@string/transfer_money"
            />

        <Button
            android:id="@+id/main_PayBills"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/ButtonTextColor"
            android:background="@color/ButtonColor"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:layout_marginTop="23dp"
            android:text="@string/pay_bills"
            />

    </LinearLayout>


    <Button
        android:id="@+id/main_Settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/ButtonColor"
        android:paddingStart="12dp"
        android:paddingLeft="12dp"
        android:paddingEnd="12dp"
        android:paddingRight="12dp"
        android:text="@string/settings"
        android:textAllCaps="false"
        android:textColor="@color/ButtonTextColor"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@+id/main_buttonsLayout"
        app:layout_constraintTop_toBottomOf="@+id/main_buttonsLayout"
        app:layout_constraintVertical_bias="0.6" />

    <Button
        android:id="@+id/main_Help"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/ButtonTextColor"
        android:background="@color/ButtonColor"
        android:textSize="24sp"
        android:textStyle="bold"
        android:paddingLeft="12dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:paddingRight="12dp"
        android:textAllCaps="false"
        android:text="@string/help"
        app:layout_constraintRight_toRightOf="@+id/main_buttonsLayout"
        app:layout_constraintTop_toTopOf="@+id/main_Settings"
        app:layout_constraintBottom_toBottomOf="@+id/main_Settings"
        />

</android.support.constraint.ConstraintLayout>

