<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TwoFactorFragment">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/edit_securityCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/hint_security_code"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/link_resendSecurityCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resend_security_code"/>

            <android.support.v4.widget.Space
                android:layout_height="0dp"
                android:layout_width="0dp"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/btn_enterCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:textColor="@color/colorButtonText"
                android:background="@color/colorButtonBackground"
                android:enabled="false"
                android:textSize="24sp"
                android:textStyle="bold"
                android:text="@string/code_enter"/>

        </LinearLayout>

    </LinearLayout>

    </android.support.constraint.ConstraintLayout>

</FrameLayout>