<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainApp.TransHistory.TransHistoryActivity">

    <LinearLayout
        android:id="@+id/topLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/trans_hist_recyclerview"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <TextView
            android:id="@+id/trans_hist_Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/transaction_history"
            android:textColor="@color/colorTitle"
            android:textSize="32sp"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/trans_hist_checkingText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkingNumber"
            android:textColor="@color/colorTitle"
            android:textSize="24sp"
            />

    </LinearLayout>


    <android.support.v7.widget.RecyclerView
        android:id="@+id/trans_hist_recyclerview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent=".7"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >

    </android.support.v7.widget.RecyclerView>


    <Button
        android:id="@+id/trans_hist_homeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:drawablePadding="7dp"
        android:textColor="@color/colorButtonText"
        android:background="@color/colorButtonBackground"
        android:drawableLeft="@drawable/home_icon"
        android:textAllCaps="false"
        android:text="@string/home"
        android:textSize="21sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/trans_hist_recyclerview"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</android.support.constraint.ConstraintLayout>
