<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainApp.AccountCreation.SecurityTutorialFragment">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <TextView
            android:id="@+id/text_securityTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="32sp"
            android:textColor="@color/colorTitle"
            android:text="@string/security_tutorial_title"/>

        <TextView
            android:id="@+id/text_pageCounter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_securityTitle"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textColor="@color/colorPrimaryDark"
            android:text="(0/0)"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:id="@+id/text_securityTutorialContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_pageCounter"
            android:layout_marginTop="16dp"
            android:textSize="24sp"/>


        <LinearLayout
            android:id="@+id/layout_tutorialNav"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            app:layout_constraintWidth_percent="0.8"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="8dp">

                <Button
                    android:id="@+id/btn_previous"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorButtonText"
                    android:background="@color/colorButtonBackground"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:text="@string/back_arrow"/>

                <android.support.v4.widget.Space
                    android:layout_height="0dp"
                    android:layout_width="0dp"
                    android:layout_weight="1"/>

                <Button
                    android:id="@+id/btn_next"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorButtonText"
                    android:background="@color/colorButtonBackground"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:text="@string/next_arrow"/>

            </LinearLayout>

            <Button
                android:id="@+id/btn_skipTutorial"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorButtonText"
                android:background="@color/colorButtonBackground"
                android:textSize="24sp"
                android:textStyle="bold"
                android:text="@string/skip"/>

        </LinearLayout>



    </android.support.constraint.ConstraintLayout>

</FrameLayout>